2003-09-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LosFormatter.cs: fixed Deserialize for empty viewstate.

2003-08-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Page.cs: check if controls that require postback have
	been changed by an event and register them to be notified of data
	changed event.

2003-08-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: patch by yaronshkop@hotmail.com (Yaron Shkop) that fixes
	bug #47866.

2003-08-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LosFormatter.cs: handle Unit and FonrUnit as special cases as they
	are not serializable. Fixes bug #47784.

2003-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: index the viewstates saved by the control position, not
	the control name. Fixes bug #47697.

2003-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ControlCollection.cs:
	* EmptyControlCollection.cs: create a minimum ArrayList for this.

	* BaseParser.cs: added setter for BaseVirtualDir.

	* Page.cs: fixed message when restoring view state fails.
	* UserControlParser.cs: set the BaseVirtualDirectory to handle the case
	when a relative path to the control is given. Fixes bug #47685.

2003-08-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: when we load the viewstate for a control that has children
	viewstates and the child is not found, keep its viewstate around and
	wait until the child is added to load the viewstate. Fixes bug #47697.

2003-08-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControl.cs: more Delegate.CreateDelegate fixes.

2003-08-01  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* PartialCachingControl.cs: is not abstract

2003-08-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SimpleHandlerFactory.cs: implemented GetHandler.
	* WebHandlerParser.cs: new file that parses .ashx files.

2003-07-30  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* PersistenceModeAttribute.cs: Fixed wrong AttributeUsage
