@@ -1,3 +1,8 @@
+2003-09-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* SimpleWebHandlerParser.cs: add the ashx/asmx file itself to the
+	dependencies so that it's recompiled when changed.
+
 2003-09-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* LosFormatter.cs: fixed Deserialize for empty viewstate.
